<resources>
    <string name="app_name">NotePad</string>
    <string name="action_settings">Settings</string>

    <string name="new_note_hint">Write the note</string>
    <string name="hint_notes">Note\'s are fetched from DB</string>
    <string name="headText">head</string>
    <string name="bodyText">body</string>
    <string name="heading_of_note">Heading of Note</string>
    <string name="hint_note_heading">write new note heading here…</string>
    <string name="new_hading_accepted">new hading accepted</string>
    <string name="new_heading_rejected">new Heading rejected</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="create_account">Create Account</string>
    <string name="request_id_token">160192871340-gl6j7q6o2u2lc9qkgc0hpirfcivi7sni.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="list_view_type">List View Type</string>
    <string name="add_note">Add Note</string>
    <string name="note_it">Note It</string>
    <string name="logout_txt">Sure you want to logout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="empty_title_toast">Title is empty</string>
    <string name="search_hint">Search note</string>
    <string name="linear_list">linear list</string>
    <string name="grid_list">grid list</string>
    <string name="staggered_list">staggered list</string>
    <string name="sorting_type">Sorting Type</string>
    <string name="sort_by_alphabet">sort by alphabet</string>
    <string name="sort_by_last_updated">sort by last updated</string>
    <string name="sort_by_created_date">sort by created date</string>
    <string name="date">date</string>
</resources>
